k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elm-ai
  namespace: elm-ai
  labels:
    app: elm-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elm-ai
  template:
    metadata:
      labels:
        app: elm-ai
    spec:
      containers:
        - name: elm-ai
          image: $CI_REGISTRY/gitlab-mirco/elm-ai:$CI_COMMIT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-registry-secret
