k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elm-ai
  namespace: elm-ai
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: elm-ai.poranipaghetti.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elm-ai
                port:
                  number: 80
